# otGpxTrack

./: .gitignore  AGENTS.md  MistralMemory.md  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
doc/: conf.py  openturns-objects.inv  theory.rst
doc/themes/openturns/: layout.html
firstexample/: .gpxAnalyse.py.swp  19218242997_ACTIVITY.fit  21183597362_ACTIVITY.fit  activity_19218242997.gpx  activity_22095267736.gpx  fitAnalyse.py  fitAnalyse_v2.py  gpxAnalyse.py
src/otGpxTrack/: .Base.py.swp  Base.py
test/: test_gpxtrack.py
