[project]
name = "otgpxtrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gpxpy>=1.6.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openturns>=1.26",
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otGpxTrack"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "numpydoc>=1.10.0",
    "pytest>=9.0.2",
    "sphinx-gallery>=0.20.0",
]
